# preprocessor

./: .directory  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  IncludeTest.ws  LICENSE  README.md  Test.ws  premake5.lua  script.lua
build32/: Scanner-Preprocessor.vcxproj  Test.ws  Test2.ws  WotScript.sln
src/: DefineModule.cpp  DefineModule.hpp  IMacro.hpp  IModule.hpp  IncludeModule.cpp  IncludeModule.hpp  Main.c  main.c  preprocessor.cpp  scanner.c  scanner.cpp  scanner_old.c
test/: .gitignore  IncludeTest.ws  Test.ws
